fixed album overflow

--- a/assets/css/album.css
+++ b/assets/css/album.css
@@ -5,11 +5,20 @@
 .blank {
   flex-grow: 1;
 }
-#divBlured {
+#dominant-bg {
   height: 500px;
 }
 @media screen and (max-width: 575px) {
-#divBlured {
+#dominant-bg {
   height: 650px;
 }
 }
+/* #dominant-bg {
+  height: 500px;
+}
+@media screen and (max-width: 575px) {
+
+  #dominant-bg {
+  height: 700px;
+}
+} */
